force-app/main/default/objects/Detection_Operand__c/Detection_Operand__c.object-meta.xml
<CustomObject>
    <description>Defines the data operands available for use in behavior detection rules and signal evaluation logic.</description>
    <label>Detection Operand</label>
    <nameField>
        <label>Operand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Detection Operands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>