force-app/main/default/objects/Detection_Operand__c/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <description>The source system or data domain from which this operand derives its value.</description>
    <label>Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quota</fullName>
            </value>
            <value>
                <fullName>Deal_Signal</fullName>
                <label>Deal Signal</label>
            </value>
            <value>
                <fullName>Forecast_Override</fullName>
                <label>Forecast Override</label>
            </value>
            <value>
                <fullName>Forecast_Period</fullName>
                <label>Forecast Period</label>
            </value>
            <value>
                <fullName>Comp_Calculation</fullName>
                <label>Comp Calculation</label>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>