force-app/main/default/objects/Detection_Operand__c/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <description>The data type of the value this operand evaluates, used for type-safe comparisons in detection rules.</description>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>