force-app/main/default/objects/Detection_Operand__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Human-readable description of what this operand represents and how it is used in detection logic.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>