force-app/main/default/objects/Detection_Operand__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this detection operand is currently active and available for use in detection rules.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>