force-app/main/default/objects/Detection_Operand__c/fields/Operand_Code__c.field-meta.xml
<CustomField>
    <fullName>Operand_Code__c</fullName>
    <description>Unique code identifying this detection operand. Used as an external identifier for integrations and rule references.</description>
    <externalId>true</externalId>
    <label>Operand Code</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>